--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "example": "examples"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -28,5 +28,21 @@
   "bugs": {
     "url": "https://github.com/franciscofsales/react-native-animated-list/issues"
   },
-  "homepage": "https://github.com/franciscofsales/react-native-animated-list#readme"
+  "homepage": "https://github.com/franciscofsales/react-native-animated-list#readme",
+  "devDependencies": {
+    "babel-jest": "^16.0.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-native": "^1.9.0",
+    "jest": "^16.1.0-alpha.691b0e22",
+    "jest-react-native": "^16.1.0-alpha.691b0e22",
+    "react-test-renderer": "^15.3.2"
+  },
+  "jest": {
+    "preset": "jest-react-native"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-native": "^0.36.1"
+  }
 }
