--- a/examples/simple/package.json
+++ b/examples/simple/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "react": "15.3.2",
-    "react-native": "0.36.0"
+    "react-native": "0.36.0",
+    "react-native-animated-list": "^1.0.3"
   },
   "jest": {
     "preset": "jest-react-native"
