--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-native-animated-list",
-  "version": "1.0.0",
+  "version": "1.0.3",
   "description": "Animated List View for React Native",
   "main": "src/index",
   "jsnext:main": "src/index",
@@ -41,6 +41,8 @@
   },
   "homepage": "https://github.com/franciscofsales/react-native-animated-list#readme",
   "devDependencies": {
+    "react": "~15.3.1",
+    "react-native": "^0.36.0",
     "babel-jest": "^16.0.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
@@ -52,8 +54,11 @@
   "jest": {
     "preset": "jest-react-native"
   },
-  "dependencies": {
-    "react": "^15.3.2",
+  "peerDependencies": {
     "react-native": "^0.36.1"
+  },
+  "dependencies": {
+    "invariant": "^2.2.1",
+    "warning": "^3.0.0"
   }
 }
